# Calculator

./: .clang-format  CMakeLists.txt  README.md
source/: CMakeLists.txt  CMakeLists.txt~  ast.hpp  astfmt.hpp  astimpl.cpp  astimpl.hpp  calculator.cpp  calculator.hpp  demangle.cpp  demangle.hpp  exceptions.hpp  interpreter.cpp  interpreter.hpp  interpreter.tpp  main.cpp  module.hpp  operators.hpp  parser.cpp  parser.hpp  pseudortti.hpp  stdlib.cpp  stdlib.hpp  testcalculator.cpp  value.hpp
